fixed gap beetwin some boxes in dashboard pages with -webkit-column-gap

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -958,8 +958,8 @@ textarea {resize: none;}
     width: 33%;
     background: rgba( 255, 255, 255, 0.1 );
     box-shadow: var(--box-shadow);
-    backdrop-filter: blur( 40px );
-    -webkit-backdrop-filter: blur( 40px );
+    backdrop-filter: blur(40px);
+    -webkit-backdrop-filter: blur(40px);
     padding: 1rem;
 }
 
@@ -1307,7 +1307,6 @@ textarea {resize: none;}
 */
 .dv-more-details {color: #878E97;}
 .dv-dashboard-main-top-item > div:last-of-type {margin-top: -1rem;}
-.dv-dashboard-main-middle {width: 100%;display: inline-flex;gap: 1rem;}
 .dv-dashboard-main-middle > div:first-of-type {width: 80%;}
 .dv-dashboard-buy-info-item > div:first-of-type > img {margin-left: .5rem;}
 .dv-dashboard-buy-info-item:first-of-type {margin-bottom: 1rem;}
@@ -1324,6 +1323,13 @@ textarea {resize: none;}
 .dv-dashboard-middle-item-2::-webkit-scrollbar{display: none;}
 .dv-dashboard-left-side-item > div:first-of-type > img {margin-left: 1rem;}
 .dv-dashboard-left-side-item > div:last-of-type > div:first-of-type {margin-left: 1rem;}
+.dv-dashboard-main-middle {
+    width: 100%;
+    display: inline-flex;
+    gap: 1rem;
+    -webkit-column-gap: 1rem;
+}
+
 .dv-dashboard-main-top {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -1424,6 +1430,7 @@ textarea {resize: none;}
     display: inline-flex;
     width: 100%;
     gap: 1rem;
+    -webkit-column-gap: 1rem;
     margin-bottom: 1rem;
 }
 
